--- a/text3.html
+++ b/text3.html
@@ -5,53 +5,50 @@
     <title>Title</title>
 </head>
 <body>
-<h1>Tổng tiền: <p id="sum">0</p></h1>
-<h1>Số lượng: <p id="count">0</p></h1>
-<button onclick="thanhToan() ">Thanh toán</button>
+<input type="text" id="screenCal">
+<button onclick="addNum(1)">1</button>
+<button onclick="addNum(2)">2</button>
+<button onclick="addNum(3)">3</button>
+<button onclick="addNum(4)"></button>
+<button onclick="addNum(5)">5</button>
+<button onclick="addNum(6)">6</button>
+<button onclick="addNum(7)">7</button>
+<button onclick="addNum(8)">8</button>
+<button onclick="addCal('+')">+</button>
+<button onclick="getResult()">=</button>
+
 <script>
-    function thanhToan() {
-        alert("Bạn cần thanh toán:" + sum.innerText +", và tổng số sản phẩm là: "+count.innerText);
-        sum.innerText = 0;
-        count.innerText = 0;
-    }
-    class Product {
-        constructor(id, ten, gia, anh) {
-            this.id = id;
-            this.ten = ten;
-            this.gia = gia;
-            this.anh = anh;
+    let str = "";
+    let num1 = 0, calc, num2 = 0;
+    function addNum(num) {
+        str += num;
+        if (num1 !== 0) {
+            num2 = num;
+        } else {
+            num1 = num;
         }
+        display();
     }
 
-    let p1 = new Product(1, "LuCi", 1000, "img/1.jpg");
-    let p2 = new Product(2, "MewTwo", 2000, "img/2.jpg");
-    let p3 = new Product(3, "Pikachu", 600, "img/3.jpg");
-    let p4 = new Product(4, "Garen", 300, "img/4.jpg");
-    let p5 = new Product(5, "Rengar", 1600, "img/5.jpg");
-    let p6 = new Product(6, "Yasuo", 1800, "img/6.jpg");
-    let p7 = new Product(7, "Ziggs", 2000, "img/7.jpg");
-    let p8 = new Product(8, "LuLi", 1200, "img/8.jpg");
-    let arrProduct = [p1, p2, p3, p4, p5, p6, p7, p8];
-    let str = '';
-    for (let i = 0; i < arrProduct.length; i++) {
-        str += '<hr>'
-        str += '<h1>'+arrProduct[i].ten+'</h1>'
-        str += '<h2>'+arrProduct[i].gia+'</h2>'
-        str += '<button onclick="addToCart('+i+')">Click me OK???</button>'
-
+    function addCal(cal) {
+        str += cal
+        calc = cal
+        display();
     }
 
-    function addToCart(id) {
-        sumInt = +sum.innerText;
-        sumInt += arrProduct[id].gia;
-        sum.innerText = sumInt;
-
-        countInt = +count.innerText;
-        countInt++;
-        count.innerText = countInt;
+    function getResult() {
+        switch (calc) {
+            case '+':
+                // str = +inp[0]+ +inp[2];
+                str = num1 + num2;
+                break;
+        }
+        display()
     }
+    function display() {
+        screenCal.value = str;
 
-    document.write(str);
+    }
 </script>
 </body>
 </html>
